<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:paddingLeft="@dimen/layout_padding_left"
    android:paddingRight="@dimen/layout_padding_right"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.imanshu.project_editor.activity.Login_Form">

    <!--<ImageView-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:src="@drawable/logo_blue"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="100dp" />-->

    <LinearLayout
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginBottom="@dimen/margin_medium"
            android:id="@+id/signup_heading"
            android:textAlignment="center"
            android:textSize="@dimen/heading_textsize"
            android:textColor="@color/black_z"
            android:text="Sign Up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:visibility="gone"/>

        <TextView
            android:layout_marginBottom="@dimen/margin_slight_medium"
            android:id="@+id/signupform_error"
            android:textAlignment="center"
            android:paddingRight="@dimen/layout_padding_right"
            android:paddingLeft="@dimen/layout_padding_left"
            android:textColor="@color/hint"
            android:text="@string/login_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:layout_marginTop="@dimen/margin_small"
            android:id="@+id/FrameLayout1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_hieght" >

        <com.facebook.login.widget.LoginButton
            android:visibility="gone"
            android:id="@+id/fb_signup_button"
            android:layout_marginTop="15dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="@string/fb_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"/>

            <Button
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:id="@+id/signup_fb_button"
                android:text="@string/fb_button"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </FrameLayout>
        <FrameLayout
            android:layout_marginTop="@dimen/margin_small"
            android:id="@+id/FrameLayout2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_hieght" >

        <com.google.android.gms.common.SignInButton
            android:textAlignment="center"
            android:id="@+id/signupform_google_login"
            android:layout_marginTop="@dimen/margin_small"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

            <Button
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:id="@+id/signup_gmail_button"
                android:text="@string/gmail_button"
                android:background="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </FrameLayout>

        <TextView
            android:id="@+id/signup_or"
            android:typeface="monospace"
            android:layout_margin="@dimen/margin_small"
            android:textStyle="italic"
            android:textAlignment="center"
            android:textSize="@dimen/or_textsize"
            android:textColor="@color/hint"
            android:text="- or -"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:id="@+id/signup_email"
            android:textColorHint="@color/hint"
            android:hint="@string/login_email"
            android:background="@drawable/border_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:textColorHint="@color/hint"
            android:id="@+id/signup_password"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/margin_small"
            android:hint="@string/signup_password"
            android:background="@drawable/border_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/signupform_button"
            android:typeface="sans"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="Sign Up"
            android:padding="@dimen/button_padding"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/mybutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/signup_text_existinguser"
        android:layout_marginBottom="@dimen/margin_medium"
        android:textColor="@color/black_z"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:text="@string/login_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</RelativeLayout>
